--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,9 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 28
+    namespace "com.dimfcompany.biosbtn"
     defaultConfig {
-        applicationId "com.dimfcompany.biosbtn"
+        compileSdk 28
         minSdkVersion 19
         targetSdkVersion 28
         versionCode 1
